--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -27,13 +27,14 @@
                             <div class="user-rate">
                                
                                <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
                                     <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
                                </span>
                             </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: Just now</p>
                         </div>
                     </div>
                 </div>
@@ -52,48 +53,19 @@
                                 <img src="/half-star.png" alt=""/>
                                 <img src="/empty-star.png" alt=""/>
                            </span>
-                        </div>
-                        <div class="col col-67">
-                            <div class="user-rate">
-                                
-                               <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
-                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
-                               </span>
-                            </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col div1">
-                    <div class="row">
-                        <div class="col col-33">
-                            <div class="side-image-wrap">
-                                <img src="/d1.png" alt=""/>
-                            </div>
-                             <span class="star-img">
-                                <img src="/fill-star.png" alt=""/>
-                                <img src="/fill-star.png" alt=""/>
-                                <img src="/fill-star.png" alt=""/>
-                                <img src="/half-star.png" alt=""/>
-                                <img src="/empty-star.png" alt=""/>
-                            </span>
                         </div>
                         <div class="col col-67">
                             <div class="user-rate">
                                
                                <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
                                     <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
                                </span>
                             </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 1m ago</p>
                         </div>
                     </div>
                 </div>
@@ -115,15 +87,16 @@
                         </div>
                         <div class="col col-67">
                             <div class="user-rate">
-                                
+                               
                                <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
                                     <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
                                </span>
                             </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 2m ago</p>
                         </div>
                     </div>
                 </div>
@@ -145,14 +118,16 @@
                         </div>
                         <div class="col col-67">
                             <div class="user-rate">
+                               
                                <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
                                     <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
                                </span>
                             </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 3m ago</p>
                         </div>
                     </div>
                 </div>
@@ -174,14 +149,47 @@
                         </div>
                         <div class="col col-67">
                             <div class="user-rate">
+                               
                                <span class="pull-right user-name">
-                                    <span>Z. Ibrahimović</span>
                                     <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
                                </span>
                             </div>
-                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
-                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p><span class="read-more"><a href="javascript:void(0)">Read More</a></span>
-                            <p class="post-date">Posted: 10/10/2016</p>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 4m ago</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col div1">
+                    <div class="row">
+                        <div class="col col-33">
+                            <div class="side-image-wrap">
+                                <img src="/d1.png" alt=""/>
+                            </div>
+                            <span class="star-img">
+                                <img src="/fill-star.png" alt=""/>
+                                <img src="/fill-star.png" alt=""/>
+                                <img src="/fill-star.png" alt=""/>
+                                <img src="/half-star.png" alt=""/>
+                                <img src="/empty-star.png" alt=""/>
+                           </span>
+                        </div>
+                        <div class="col col-67">
+                            <div class="user-rate">
+                               
+                               <span class="pull-right user-name">
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                                    <span class="user-title">Z. Ibrahimović</span>
+                               </span>
+                            </div>
+                            <p class="dish-name">Tasty chicken tacos</p>
+                            <p class="res-nam"> KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 2 days ago</p>
                         </div>
                     </div>
                 </div>
