--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -3,8 +3,7 @@
 	    <div class="bar bar-header bar-light head_bar">
 		    <div class="back_arrrow next-bar">
 		    	<span class="sp2"><a ui-sref="review"><img src="./left-arrow.png" alt=""/></a></span>	
-		    	<h2>Review a dish</h2>
-		    	<span class="nxt"><a href="javascript:void(0)" ng-click="filter.redirectTo()">Next</a></span>
+		    	<h2 class="logo-ig"><img src="./thedish.png"></h2>
 		    </div>
 	    </div>
     </ion-header-bar>
@@ -32,7 +31,7 @@
 	    			</div>
 	            </div>
     		</div>
-    		<!--<a href="javascript:void(0)" class="next-btn" ng-click="filter.redirectTo()">Next</a>-->
+    		<a href="javascript:void(0)" class="next-btn" ng-click="filter.redirectTo()">Next</a>
     	</div>
     </ion-content>
 </ion-view>
