--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -3,7 +3,7 @@
     <div class="bar bar-header bar-light head_bar rev-header">
       <div class="back_arrrow">
         <span class="sp2"><a ng-click="review.previousView()"><img src="./left-arrow.png" alt=""/></a></span>  
-        <h2>Review a dish</h2>
+        <h2 class="logo-ig"><img src="./thedish.png"></h2>
       </div>
     </div>
   </ion-header-bar>
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div class="reviw-box">
+      <!--<div class="reviw-box">
         <div class="review-icons">
           
           <div class="row">
@@ -66,10 +66,10 @@
           </div>
 
         </div>
-      </div>  
+      </div>  -->
     </div>
   </ion-content>
-    <!-- <div class="bar-assertive suggest_foot review">
+    <div class="bar-assertive suggest_foot review">
       <div class="tabs tabs-icon-top dish-view rev-tabs">
           <a class="tab-item" ng-click="review.openGallery()">
             <img src="/gallery.png" alt="" class="inactive">
@@ -84,5 +84,5 @@
             <img src="/video-hover.png" alt="" style="display:none"  class="active">
           </a>
         </div>
-    </div> -->  
+    </div>
 </ion-view>
