--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -35,6 +35,18 @@
                   </span>
                 </label>
                 <label class="item-input item-floating-label">
+                  <span class="icon-top user"><img src="./user.png" alt="" ></span>
+                  <span class="icon-wrap">
+                    <input type="text" placeholder="Username" ng-model="settings.formData.username">
+                  </span>
+                </label>
+                <label class="item-input item-floating-label">
+                  <span class="icon-top user"><img src="./qoutes.png" alt="" ></span>
+                  <span class="icon-wrap">
+                    <input type="text" placeholder="Bio" ng-model="settings.formData.bio">
+                  </span>
+                </label>
+                <label class="item-input item-floating-label">
                   <span class="icon-top user"><img src="./zip.png" alt="" class=""></span>
                   <span class="icon-wrap">
                     <input type="text" placeholder="Zip Code" ng-model="settings.formData.zip_code" required-error-message="This field is required!" validator="required, zipValidator=6">
